@@ -1,3 +1,6 @@
+2008-01-01
+"MyWord" added the readword function
+
 2007-12-31
 "MyWord" added the ReciteRecord class
 
